no word wrap to prevent hard to read menu labels

--- a/trunk/code/perl/templates/css_src/VisDoc.css
+++ b/trunk/code/perl/templates/css_src/VisDoc.css
@@ -94,7 +94,7 @@ from esc tab hack moz min-height solution ***/
 }
 #sidebarContent {
 	position:relative;
-	word-wrap:break-word;
+	/*word-wrap:break-word;*/
 }
 #main {
 	width:100%;
